# sstcam-common

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  sstcam_common_version.h.in
.github/workflows/: sstcam_common_CI.yml  tests.yml
calibration/: CMakeLists.txt
calibration/include/sstcam/calibration/: Calibrator.h
calibration/pybind/: module.cc
calibration/python/: __init__.py
calibration/src/: Calibrator.cc
constants/: CMakeLists.txt
constants/ctests/: test_main.cc
constants/include/sstcam/constants/: Geometry.h  Logger.h
constants/pybind/: module.cc
constants/python/: __init__.py
constants/src/: Geometry.cc  Logger.cc
descriptions/: CMakeLists.txt
descriptions/ctests/: Waveform.cc  WaveformEvent.cc  test_Waveform.cc  test_WaveformDataPacket.cc  test_WaveformEvent.cc
descriptions/include/sstcam/descriptions/: Waveform.h  WaveformDataPacket.h  WaveformEvent.h
descriptions/protobuf/: log.proto
descriptions/pybind/: Waveform.cc  WaveformDataPacket.cc  WaveformEvent.cc  module.cc
descriptions/pytests/: test_Waveform.py  test_WaveformDataPacket.py  test_WaveformEvent.py
descriptions/python/: __init__.py  ssreadout.py  testmodule.py  triggerpatternpacket.py
descriptions/src/: Waveform.cc  WaveformDataPacket.cc  WaveformEvent.cc
io/: CMakeLists.txt  FindCFITSIO.cmake
io/ctests/: FitsUtils.cc  TIOReader.cc  doctest.h  test_FitsUtils.cc  test_TIOReader.cc
io/include/sstcam/io/: FitsUtils.h  TIOReader.h  Util.h
io/pybind/: TIOReader.cc  module.cc
io/pytests/: test_TIOReader.py
io/python/: __init__.py
io/share/sstcam/io/: chec_r1.tio  targetmodule_r0.tio  targetmodule_r1.tio
io/src/: FitsUtils.cc  TIOReader.cc  Util.cc
